<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Título de la pantalla -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center" />

        <!-- Mensaje de advertencia -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/warning_icon"
                android:src="@drawable/asterisk_required"
                app:tint="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_advertencia"
                android:textColor="@color/secondary"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <!-- DIA Y FECHA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/text_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_spinner"
                android:textSize="18sp"
                android:layout_marginEnd="8dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_spinner"
                android:textSize="18sp"
                android:text="01/01/2024"
                android:layout_marginEnd="8dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Contador de tiempo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp">
            <!-- Hora -->
            <TextView
                android:id="@+id/text_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="17"
                android:padding="10dp"
                android:background="@drawable/rounded_hour"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="4dp" />

            <!-- Separador " : " -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="4dp" />

            <!-- Minutos -->
            <TextView
                android:id="@+id/text_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:padding="10dp"
                android:background="@drawable/rounded_hour"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="4dp" />

            <!-- Separador " : " -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="4dp" />

            <!-- Segundos -->
            <TextView
                android:id="@+id/text_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00"
                android:padding="10dp"
                android:background="@drawable/rounded_hour"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="4dp"/>

            <!-- Separador " AM/ PM " -->
            <TextView
                android:id="@+id/text_am_pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AM"
                android:padding="10dp"
                android:background="@drawable/rounded_hour"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="4dp" />
        </LinearLayout>


        <!-- Employee Name Spinner -->
        <TextView
            android:id="@+id/text_view_employee_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_spinner"
            android:paddingHorizontal="12dp"
            android:hint="Nombre del Empleado"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:focusable="false"
            android:clickable="false" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <!-- Texto encima del Spinner -->
            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sede"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:drawableEnd="@drawable/asterisk_required"
                android:textColor="@color/black"
            />
            <!-- Location Spinner -->
            <Spinner
                android:id="@+id/spinner_location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_spinner"
                android:paddingHorizontal="12dp" />
        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <!-- Texto encima del Spinner -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Turno"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:drawableEnd="@drawable/asterisk_required"
            android:textColor="@color/black" />
        <!-- Shift Spinner -->
        <Spinner
            android:id="@+id/spinner_shift"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_spinner"
            android:paddingHorizontal="12dp" />
    </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <!-- Texto encima del Spinner -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estado"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:drawableEnd="@drawable/asterisk_required"
                android:textColor="@color/black" />
        <!-- Location Spinner -->
        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_spinner"
            android:paddingHorizontal="12dp" />
        <!-- Remarks -->
    </LinearLayout>
        <EditText
            android:id="@+id/edit_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Agregar Observación"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />
        <!-- QR Code Button -->
        <Button
            android:id="@+id/btn_scan_qr"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button_gray"
            android:text="@string/texto_boton_escaneo"
            android:textColor="@color/primary"
            android:textStyle="bold" />
        <!-- Submit Button -->
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_red"
            android:text="@string/texto_boton_registro"
            android:textColor="@color/white"
            android:textStyle="bold" />



    </LinearLayout>
</ScrollView>
